tests/fixtures/cargo/check_failure.txt
   Compiling tokf v0.1.0 (/Users/user/project)
error[E0425]: cannot find value `foo` in this scope
 --> src/main.rs:5:15
  |
5 |     let x = foo;
  |               ^^^ not found in this scope

error[E0308]: mismatched types
 --> src/lib.rs:12:9
  |
12|     return "hello";
  |            ^^^^^^^ expected `i32`, found `&str`

error: aborting due to 2 previous errors
